<resources>
    <string name="app_name">Designer</string>
    <string name="title_activity_select_board">All Boards</string>
    <string name="settings">Settings</string>
    <string name="add_rectangle">add rectangle</string>
    <string name="add_text">add text</string>
    <string name="add_image">add image</string>
    <string name="add_group">add group</string>
    <string name="toggle_pan_move_item">toggle pan/move item</string>
    <string name="toggle_grid">toggle grid</string>
    <string name="colors">Colors</string>
    <string name="boxes">Boxes</string>
    <string name="textstyles">Textstyles</string>
    <string name="styles">Styles</string>
    <string name="properties">Properties</string>
    <string name="tools">Tools</string>
    <string name="no_object_selected">No Object selected</string>
    <string name="name">Name</string>
    <string name="object_name">Object name</string>
    <string name="delete">delete</string>
    <string name="create_standalone_item">create standalone item</string>
    <string name="xpos" translatable="false">X Position</string>
    <string name="ypos" translatable="false">Y Position</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="create_copy">create copy</string>
    <string name="opacity">Opacity (0-255)</string>
    <string name="shadow">Shadow</string>
    <string name="blur">Blur</string>
    <string name="x" translatable="false">X</string>
    <string name="y" translatable="false">Y</string>
    <string name="open">open</string>
    <string name="choose_image">choose Image</string>
    <string name="keep_aspect_ratio">keep aspect ratio</string>
    <string name="tint_image">Tint Image</string>
    <string name="tint_color">Tint Color</string>
    <string name="fill_color">Fill Color</string>
    <string name="color">Color</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="size">Size</string>
    <string name="text">text</string>
    <string name="grid_and_rulers"><![CDATA[Grid & Rulers]]></string>
    <string name="ruler_every">Ruler every X px</string>
    <string name="grid_every">Grid every X marks</string>
    <string name="loading">loading...</string>
    <string name="create_new_board">Create new Board</string>
    <string name="create">Create</string>
    <string name="edit_board">Edit board</string>
    <string name="choose_option">Choose an option</string>
    <string name="duplicate">duplicate</string>
    <string name="duplicate_board">Duplicate board</string>
    <string name="duplicating">Duplicating</string>
    <string name="off_ui_drawing_long">Use experimental off-UI-Thread drawing</string>
    <string name="off_ui_drawing">draw on 2nd Thread</string>
    <string name="board_settings">Board settings</string>
    <string name="extract_style">Extract Style</string>
    <string name="save">save</string>
    <string name="edit_box_style">Edit Box Style</string>
    <string name="style_in_use">Style is still in use!</string>
    <string name="set_color_style">set Color Style</string>
    <string name="apply_color_style_to">Where do you want to apply the color?</string>
    <string name="fill">Fill</string>
    <string name="stroke">Stroke</string>
    <string name="cant_delete_copied_object">Can\'t delete copied object.</string>
    <string name="copy_of">copy of </string>
    <string name="user_images">user images</string>
    <string name="show_interface">Show Interface</string>
    <string name="export">export</string>
    <string name="share">share</string>
    <string name="title_app">Designer</string>
    <string name="choose_font">choose Font</string>
    <string name="delete_unused_files">Delete unused Files</string>
    <string name="rect_fill_switch">use Gradient fill</string>
    <string name="gradient_start_color">Gradient start color</string>
    <string name="gradient_end_color">Gradient end color</string>
    <string name="no_colorstyles">No Colors defined</string>
    <string name="no_boxstyles">No Boxstyles defined</string>
    <string name="no_textstyles">No Textstyles defined</string>
    <string name="info_rotation_no_handles">rotated objects show no resizing handles</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_color">Edit Color</string>
    <string name="edit_color_style">Edit Color Style</string>
    <string name="edit_text_style">Edit Text Style</string>
    <string name="edit_font">Edit font</string>
    <string name="group_selected_objects">group selected Objects</string>
    <string name="import_objects">import objects</string>
    <string name="vertical_position">Vertical Position</string>
    <string name="horizontal_position">Horizontal Position</string>
    <string name="sign_in">Sign in</string>
</resources>
