<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- FILL -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <ImageView
            android:id="@+id/icon_object_fill"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_format_color_fill_grey600_24dp"/>
        <Switch
            android:id="@+id/toggle_object_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:text="@string/rect_fill_switch"
            android:checked="false"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_object_fill_solid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="4dp"
        android:clipToPadding="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/fill_color"/>
        <Button
            android:id="@+id/btn_object_fillcolor"
            android:layout_width="116dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:elevation="2dp"
            android:foreground="?attr/selectableItemBackground"/>
        <ImageView
            android:id="@+id/btn_object_extractfillcolor"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="6dp"
            android:layout_gravity="right|bottom"
            android:src="@drawable/ic_content_save_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_object_fill_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:orientation="vertical"
        android:visibility="gone">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="4dp">
            <ImageView
                android:id="@+id/btn_object_gradient_horizontal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_panorama_horizontal_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
            <ImageView
                android:id="@+id/btn_object_gradient_vertical"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/ic_panorama_vertical_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
            <ImageView
                android:id="@+id/btn_object_gradient_circle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:padding="12dp"
                android:src="@drawable/ic_panorama_fisheye_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingRight="4dp"
            android:clipToPadding="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/gradient_start_color"/>
            <Button
                android:id="@+id/btn_object_gradient_startcolor"
                android:layout_width="116dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:elevation="2dp"
                android:foreground="?attr/selectableItemBackground"/>
            <ImageView
                android:id="@+id/btn_object_extractgradientstartcolor"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_gravity="right|bottom"
                android:src="@drawable/ic_content_save_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingRight="4dp"
            android:clipToPadding="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/gradient_end_color"/>
            <Button
                android:id="@+id/btn_object_gradient_endcolor"
                android:layout_width="116dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:elevation="2dp"
                android:foreground="?attr/selectableItemBackground"/>
            <ImageView
                android:id="@+id/btn_object_extractgradientendcolor"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_gravity="right|bottom"
                android:src="@drawable/ic_content_save_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
        </FrameLayout>
    </LinearLayout>


    <!-- STROKE -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_border_style_grey600_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_strokewidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/width"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="2"
                android:text="0"/>
        </android.support.design.widget.TextInputLayout>
        <FrameLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:clipToPadding="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:translationY="-4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/color"/>
            <Button
                android:id="@+id/btn_object_strokecolor"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="12dp"
                android:elevation="2dp"
                android:foreground="?attr/selectableItemBackground"/>
        </FrameLayout>
        <ImageView
            android:id="@+id/btn_object_extractstrokecolor"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="4dp"
            android:padding="6dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_content_save_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </FrameLayout>


    <!-- CORNERS -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_rounded_corner_grey600_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_cornerradius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/corner_radius"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="3"
                android:text="0"/>
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>


    <!-- SHADOW -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_box_shadow_grey600_24dp"/>
        <CheckBox
            android:id="@+id/field_object_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_gravity="bottom"
            android:text="@string/shadow"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_shadowblur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/blur"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="2"
                android:text="0"/>
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_shadowx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/x"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="2"
                android:text="0"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_shadowy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/y"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="2"
                android:text="0"/>
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

</merge>