<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_format_color_fill_grey600_24dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="4dp"
            android:clipToPadding="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/color"/>
            <Button
                android:id="@+id/btn_object_textcolor"
                android:layout_width="116dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:elevation="2dp"
                android:foreground="?attr/selectableItemBackground"/>
            <ImageView
                android:id="@+id/btn_object_extracttextcolor"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_gravity="right|bottom"
                android:src="@drawable/ic_content_save_grey600_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
        </FrameLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingRight="4dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_format_text_grey600_24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="Font"/>
            <TextView
                android:id="@+id/display_object_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <Button
                android:id="@+id/btn_choose_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_font"/>
        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:paddingRight="4dp">
        <ImageView
            android:id="@+id/btn_object_textalignleft"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_format_align_left_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
        <ImageView
            android:id="@+id/btn_object_textaligncenter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_format_align_center_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
        <ImageView
            android:id="@+id/btn_object_textalignright"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:padding="12dp"
            android:src="@drawable/ic_format_align_right_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:paddingRight="4dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_fontsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/size"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="3"
                android:text="16"/>
        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:id="@+id/btn_object_extracttextstyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="6dp"
            android:layout_gravity="right|bottom"
            android:src="@drawable/ic_content_save_grey600_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_textbox_grey600_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_object_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text"
                android:inputType="textMultiLine"
                android:text="text"/>
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

</merge>